# hazkey

./: .gitignore  CMakeLists.txt  NOTICE.md  README.md  THIRDPARTYLICENSE
.github/workflows/: build.yml  grimodex-package-ci.yml  grimodex-spike-ci.yml
debian/: README.source  changelog  control  copyright  fcitx5-grimodex.install  postinst  rules
debian/source/: options
debian/upstream/: metadata
docs/: adr-001-swift-composition-session.md  adr-002-mozc-conversion-only-learning-profile.md  composition-contract-conformance.md  grimodex-fcitx5-ime-architecture-implementation-plan.md  grimodex-ime-phase3-spike.md  linux-release-evidence.md
docs/spikes/fcitx-mozkey-ab-2026-07-14/: README.md  benchmark.json  capabilities.json  fcitx-mozkey-quality.tsv  fcitx-mozkey-top1.jsonl
docs/spikes/fcitx-mozkey-followup-2026-07-14/: README.md  daily-dictionary-audit.json  mozc-core-adapter.json  process-benchmark.manifest.json  process-benchmark.raw.json  protocol-v2-backend-benchmark.json  runtime-ab-summary.json
docs/spikes/fcitx-mozkey-followup-2026-07-14/mozc-core-adapter-smoke/: BUILD.bazel  converter_adapter_smoke.cc
docs/spikes/mozc-adoption-decision-2026-07-15/: README.md  decision.json
docs/spikes/mozc-hybrid-2026-07-15/: README.md
fcitx5-hazkey/: CMakeLists.txt  org.fcitx.Fcitx5.Addon.Hazkey.metainfo.xml.in
fcitx5-hazkey/po/: CMakeLists.txt  fcitx5-grimodex.pot  ja.po
fcitx5-hazkey/src/: CMakeLists.txt  hazkey-addon.conf.in.in  hazkey-im.conf.in  hazkey_action_mapper.cpp  hazkey_action_mapper.h  hazkey_candidate.cpp  hazkey_candidate.h  hazkey_candidate_display.h  hazkey_config.h  hazkey_effect_ledger.cpp  hazkey_effect_ledger.h  hazkey_engine.cpp  hazkey_engine.h  hazkey_recovery_journal.cpp  hazkey_recovery_journal.h  hazkey_server_connector.cpp  hazkey_server_connector.h  hazkey_session_client.cpp  hazkey_session_client.h  hazkey_snapshot_renderer.cpp  hazkey_snapshot_renderer.h  hazkey_socket_io.cpp  hazkey_socket_io.h  hazkey_state.cpp  hazkey_state.h  hazkey_text_offset.cpp  hazkey_text_offset.h
fcitx5-hazkey/tests/: CMakeLists.txt  grimodex_product_identity_test.cpp  hazkey_action_mapper_test.cpp  hazkey_candidate_display_test.cpp  hazkey_candidate_interaction_test.cpp  hazkey_fcitx_full_stack_test.cpp  hazkey_server_connector_test.cpp  hazkey_session_client_test.cpp  hazkey_snapshot_renderer_test.cpp  hazkey_socket_io_test.cpp  hazkey_text_offset_test.cpp  hazkey_v2_safety_test.cpp  run_fcitx_full_stack_test.py  verify_contract_fixture.cmake
hazkey-server/: CMakeLists.txt  Package.resolved  Package.swift  build_swift.cmake  hazkey-server.sh.in  prepare_azookey_dependency.cmake  prepare_no_zenzai_dependency.cmake
hazkey-server/Sources/hazkey-server/: ABProbe.swift  CompositionSession.swift  GrimodexBuiltInGuardDictionary.swift  HazkeyCompositionSurfaceMapper.swift  HazkeyKanaKanjiConverterAdapter.swift  HazkeySessionEnvironment.swift  ImeAction.swift  ImePhase.swift  ImeProtocolV2.swift  ImeReducer.swift  KanaKanjiConverterPort.swift  LearningSynchronizedKanaKanjiConverter.swift  MozcFirstHybridKanaKanjiConverter.swift  MozcKanaKanjiConverterAdapter.swift  MozcSidecarClient.swift  ProtectedSurfacePolicy.swift  SessionSnapshot.swift  UserDictionary.swift  config.swift  constants.swift.in  grimodexDiagnostics.swift  (+18 more)
hazkey-server/scripts/: generate-swift-protobuf.sh  swift-test.sh
hazkey-settings/: CMakeLists.txt  config_definitions.h  constants.h.in  hazkey-icon.qrc  hazkey-settings.desktop.in  hazkey-settings_ja_JP.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  serverconnector.cpp  serverconnector.h  settings_product_paths.h  zenzai_model_downloader.cpp
hazkey-settings/controllers/: about_tab_controller.cpp  ai_tab_controller.cpp  ai_tab_controller.h  conversion_tab_controller.cpp  dictionary_tab_controller.cpp  dictionary_tab_controller.h  direct_commit_targets.h  input_style_tab_controller.cpp  tab_context.h  user_interface_tab_controller.cpp  warning_widget_factory.cpp  warning_widget_factory.h
hazkey-settings/tests/: direct_commit_targets_test.cpp  serverconnector_save_test.cpp  settings_build_contract.cmake  settings_product_paths_test.cpp
linux-shared/: grimodex_product_identity.h
packaging/: README.md
packaging/manifests/: fcitx5-grimodex.install-paths  fcitx5-grimodex.uninstall-paths  fcitx5-hazkey.reference-paths
packaging/scripts/: audit_product_network_capabilities.py  audit_swift_hub_offline.py  collect_third_party_licenses.py  render_aur_release.py  verify_mozc_artifact_bundle.py
packaging/tests/: package_contract_test.py
protocol/: base.proto  commands.proto  config.proto
scripts/: grimodex-ime.sh  grimodex-ime_mozc.sh
tools/dictionary/: audit_mozc_v2_interaction_model.py  authorize_mozc_v2_b1.py  benchmark_process_backend.py  benchmark_process_pair.py  blind_conversion_ab.py  build_frozen_corpus.py  build_frozen_corpus_v2.py  build_mozc_hybrid_segment_holdout_v1.py  compare_conversion_quality.py  compile_mozc_acceptable_path_evaluation.py  evaluate_context_boundaries.py  evaluate_conversion_quality.py  evaluate_mozc_acceptable_path_boundaries.py  evaluate_mozc_adoption_v2_gate.py  evaluate_mozc_b0_gate.py  evaluate_mozc_hybrid_segment_holdout.py  evaluate_mozc_hybrid_spike.py  evaluate_mozc_zenzai_hybrid_quality.py  evaluate_zenzai_boundary_policy_quality.py  evaluate_zenzai_full_context_quality.py  evaluate_zenzai_left_context_quality.py  import_ajimee_contextual_blind_silver.py  prepare_acceptable_path_empty_context_sidecar.py  prepare_ajimee_contextual_full_evaluation.py  prepare_blind_silver_annotations.py  prepare_mozc_fixed_boundary_sidecar.py  prepare_mozc_hybrid_boundary_annotations.py  prepare_mozc_quality.py  prepare_mozc_v2_interaction_sidecar.py  prepare_mozc_v2_normal_input_context_probe.py  route_mozc_boundary_proposals.py  run_mozc_b0_measurement.py  run_mozc_b0_stability.py  run_mozc_v2_b1_objective.py  run_mozc_v2_objective.py  seal_frozen_corpus_v2.py  serve_mozc_boundary_annotations.py  summarize_ab_probe.py  summarize_conversion_quality.py
tools/mozc/: build_fixed_sidecar_bundle.py
(+139 files in other folders)
